fix tooltip alignment issue

--- a/assembl/static2/css/semanticAnalysis.scss
+++ b/assembl/static2/css/semanticAnalysis.scss
@@ -191,17 +191,6 @@
       margin-bottom: 100px;
     }
 
-    .titleWithTooltip-container {
-      h2 {
-        margin-top: 0;
-      }
-
-      .titleTooltip-container {
-        margin-top: 0;
-        margin-bottom: 10px;
-      }
-    }
-
     .sentimentBar {
       margin-top: 15px;
       width: 40%;
