--- a/assembl/static2/css/variables.scss
+++ b/assembl/static2/css/variables.scss
@@ -203,7 +203,7 @@ $screen-md-min: 992px;
 $screen-md-max: 1199px;
 
 $screen-lg-min: 1200px;
-$screen-xl-min: 1451px;
+$screen-xl-min: 1440px;
 
 // Proper media-queries examples https://stackoverflow.com/questions/18424798/twitter-bootstrap-3-how-to-use-media-queries
 
